fix: Allow the main nav 2nd and 3rd level to break into new lines on desktop

--- a/src/styles/globals/navigation/_main-nav-second-level.css
+++ b/src/styles/globals/navigation/_main-nav-second-level.css
@@ -30,16 +30,19 @@
 
 .main-nav__list-item[nav-item-level="2"] .main-nav__text {
     font-size: var(--main-nav-level-2-list-item-font-size);
+    white-space: normal;
 }
 
 @media screen and (width >= 1024px) {
     .main-nav__list[nav-list-level="2"] {
         --main-nav-level-2-list-padding: var(--spacing-normal) var(--spacing-normal) var(--spacing-normal) var(--spacing-m);
         --main-nav-level-2-list-column-count: 2;
-        --main-nav-level-2-list-gap: var(--spacing-normal);
+        --main-nav-level-2-list-gap: var(--spacing-s);
         --main-nav-level-2-border-radius: 0 0 var(--border-radius-default) var(--border-radius-default);
         --main-nav-level-2-position: absolute;
         --main-nav-level-2-list-item-grid-template-columns: 1fr var(--main-nav-chevron-icon-desktop-size);
+        --main-nav-level-2-min-width: 16rem;
+        --main-nav-level-2-max-width: 20rem;
 
         --main-nav-level-2-list-width: fit-content;
         --main-nav-level-2-list-left: 0;
@@ -55,6 +58,8 @@
         --main-nav-text-before-display: block;
         --main-nav-text-before-icon: var(--icon-chevron-right);
 
+        --main-nav-level-2-link-line-height: 1.4;
+
         position: var(--main-nav-level-2-position);
         left: var(--main-nav-level-2-list-left);
         bottom: var(--main-nav-list-bottom);
@@ -65,6 +70,8 @@
         column-count: var(--main-nav-level-2-list-column-count);
         column-gap: var(--main-nav-level-2-list-gap);
         border-radius: var(--main-nav-level-2-border-radius);
+        min-width: var(--main-nav-level-2-min-width);
+        max-width: var(--main-nav-level-2-max-width);
     }
 
     .main-nav__list-item[nav-item-level="1"]:last-child .main-nav__list[nav-list-level="2"] {
